Fixed margins. Need to create containers for all pages to keep navbar stuck to top

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
+.home-container {
+  height: 100vh;
+  margin-top: 5px;
+}
 .logo {
-  height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -33,10 +35,6 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
 .read-the-docs {
   color: #888;
 }
@@ -46,4 +44,5 @@
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   gap: 20px;
+  width: 100vw;
 }
